crates/deadline-cli/tests/snapshots/cli_worker__worker_list_api_failure_prints_error.snap
---
source: crates/deadline-cli/tests/cli_worker.rs
info:
  program: deadline
  args:
    - worker
    - list
    - "--fleet-id"
    - fleet-abc
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:58853"
    AWS_ENDPOINT_URL_STS: "http://localhost:58853"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXmRlXc/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXmRlXc
---
success: false
exit_code: 1
----- stdout -----
Failed to get Workers from Deadline:
AccessDeniedException: Access denied

----- stderr -----
