crates/deadline-cli/tests/snapshots/cli_worker__worker_list_prints_workers_with_count.snap
---
source: crates/deadline-cli/tests/cli_worker.rs
info:
  program: deadline
  args:
    - worker
    - list
    - "--fleet-id"
    - fleet-abc
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61904"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61904"
    AWS_ENDPOINT_URL_STS: "http://localhost:61904"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpyDXaiQ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpyDXaiQ
---
success: true
exit_code: 0
----- stdout -----
Displaying 2 of 2 workers starting at 0

- workerId: worker-aaa
  status: RUNNING
  createdAt: 2024-01-01 00:00:00+00:00
- workerId: worker-bbb
  status: IDLE
  createdAt: 2024-01-02 00:00:00+00:00


----- stderr -----
