crates/deadline-cli/tests/snapshots/cli_worker__worker_list_with_page_size_and_offset.snap
---
source: crates/deadline-cli/tests/cli_worker.rs
info:
  program: deadline
  args:
    - worker
    - list
    - "--fleet-id"
    - fleet-abc
    - "--page-size"
    - "10"
    - "--item-offset"
    - "5"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:58202"
    AWS_ENDPOINT_URL_STS: "http://localhost:58202"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmprcEKPv/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmprcEKPv
---
success: true
exit_code: 0
----- stdout -----
Displaying 1 of 20 workers starting at 5

- workerId: worker-ccc
  status: IDLE
  createdAt: 2024-01-03 00:00:00+00:00


----- stderr -----
